Bug Fixes #2 - Fixed White Space Issues - Fixed Navigation Bar logo - Fixed Content Overflow on devices with max-width:300px - Removed Top Navigation on minScreenSizeOverlay - Added Logo on MinScreenSizeOverlay

--- a/css/main.css
+++ b/css/main.css
@@ -11,25 +11,23 @@ body,html{
 	width:100%;
 	height:100%;
 	z-index:99999;
-	background:#FFF;
+	box-shadow:inset 0px 0px 100px 1px #6B6B6B;
+	background:#ECF0F1;
 }
-.minScreenSizeOverlay .smallscr{
+.minScreenSizeOverlay .contentContainer{
 	position:relative;
 	width:100%;
 	height:100%;
 }
-.minScreenSizeOverlay .contentContainer{
+.minScreenSizeOverlay .content{
 	text-align:center;
 	position:absolute;
 	margin:auto;
-	background:#ECF0F1;
 	top:0;bottom:0;
-	height:100px;
 	width:100%;
 	padding: 25px;
 	padding-top: 75%;
 	padding-bottom: 80%;
-	box-shadow:inset 0px 0px 100px 1px #6B6B6B;
 	font-family:'Chewy',cursive;
 	font-weight: bold;
 	font-size: 20px;
@@ -286,7 +284,7 @@ a.page-scroll{
 	padding-top:100px;
 	background:#ECF0F1;
 	box-shadow:inset 0px 0px 100px 1px #6B6B6B;
-
+	overflow-x:hidden;
 }
 #home .container{
 	position:relative;
@@ -411,6 +409,11 @@ a.page-scroll{
 	box-sizing:border-box;
 	color:#000;
 	text-align:center;
+}
+@media all and (max-width:299px){
+	.eventBox{
+		display:none;
+	}
 }
 @media all and (min-width:300px) and (max-width:768px){
 	.eventBox{
